Update services for redesigned domain model